--- a/firstProgram.html
+++ b/firstProgram.html
@@ -24,9 +24,9 @@
 
 </head>
 
-<body class="bg">
+<body class="bg scrollbar scrollbar_style">
   <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
-  <div id="mySidenav" class="sidenav">
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
@@ -55,14 +55,12 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
 
-
-  <h1 class="head-left">Lets learn C</h1>
-  <h1 class="head-right">התוכנית הראשונה שלנו</h1>
-  <div class="para">
+  <section id="main">
+    <h1 class="head-left">Lets learn C</h1>
+    <h1 class="head-right">התוכנית הראשונה שלנו</h1>
     <div class="row">
       <div class="col-md-6">
-
-        <div class="check">
+        <div class="para">
           בתוכנית זו נלמד איך מדפיסים למסך <span dir="ltr">hello world</span>: <br>
 
           include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית)<br>
@@ -85,8 +83,7 @@
         </figure>
       </div>
     </div>
-  </div>
-
+  </section>
 </body>
 
 </html>
