--- a/functions.html
+++ b/functions.html
@@ -23,9 +23,9 @@
 
 </head>
 
-<body class="bg-fiveAndHalf">
+<body class="bg-fiveAndHalf scrollbar scrollbar_style">
   <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
-  <div id="mySidenav" class="sidenav">
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
@@ -294,7 +294,7 @@ printf(<u>"amount of students with same grades as the avg is: %d\n"</u>, onTheAv
         1. הצהרת הפונקציה צריכה להיות מעל פונקציית ה main.
         <br>
         הכוונה היא שאם אנחנו רוצים לרשום למשל פונקציה שמחשבת ממוצעים אז צריך להצהיר עליה לפני שהצהרנו על ה main שלנו ז"א
-        לרשום למשל: 
+        לרשום למשל:
         <br>
         <span dir="ltr">avg(int *arr , int sizeOfArr);</span>
         <br>
@@ -350,7 +350,7 @@ printf(<u>"amount of students with same grades as the avg is: %d\n"</u>, onTheAv
     </div>
     <!--ROW-->
 
-   
+
 
     <div class="First-Para">
 
@@ -374,7 +374,7 @@ printf(<u>"amount of students with same grades as the avg is: %d\n"</u>, onTheAv
         <br>
         <span dir="ltr">nameOfTheFunction</span> = שם הפונקציה – רצוי שתהיה ברורה
         <br>
-    
+
         <span dir="ltr">(What the function receives); </span>= אילו משתנים הפונקציה מקבלת ?
         <br>
       </p>
@@ -412,7 +412,7 @@ printf(<u>"amount of students with same grades as the avg is: %d\n"</u>, onTheAv
 <b>double</b> returnSum(<b>double</b> *arr , <b>int</b> sizeOfArr);
             </code></pre>
         </figure>
-      
+
 
       </div>
       <!--COL MD 6 - FOR CODE-->
