--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 </head>
 
-<body class="bg">
+<body class="bg scrollbar scrollbar_style">
 
   <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
-  <div id="mySidenav" class="sidenav">
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
@@ -54,37 +54,39 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <h1 class="head-left">Lets learn C</h1>
-  <h1 class="head-right">מי אנחנו?</h1>
+  <section id="main">
+    <h1 class="head-left">Lets learn C</h1>
+    <h1 class="head-right">מי אנחנו?</h1>
 
-  <div class="First-Para">
-    <p>היי, ברוכים הבאים לאתר שלנו Lets learn C.
-      <br>
-      אנו שלושה סטודנטים מהמכון הטכנולוגי בחולון שמתחילים את שנתם השנייה.
-      <br>
-      בתור סטודנטים שעברו את שנה א' אנו יודעים כמה מייגעת וקשה היא, כמה מעט חומר בעברית יש
-      על שפת סי ואם כבר יש חומר על השפה הזו, הוא בד"כ ישן , לא מעודכן , לא מובן ובעיקר לא נוח לקריאה.
-      <br>
-      אז בתור פרויקט לקחנו על עצמנו הכנת אתר זה שמטרתו לעזור לסטודנטים אחרים (ובעצם לכל מי שרוצה ללמוד את הבסיס של שפת
-      סי) ללמוד.
-      חשוב לנו מאוד לציין, שמדובר בשפה שלא נחשבת לקלה בתור שפה ראשונה, אבל היתרונות שלה על שפת אחרות הוא בכך שכאשר עבודה
-      נעשית בשפת סי היא נעשית ברמה מאוד נמוכה מבחינת המעבד <br>(low level) ובשל כך אנו לומדים קצת יותר טוב מה קורה
-      בתחתית.
-      <br>
-      <br>
-      קצת עלינו:
-      <br>
-      להב הררי – הוגה הפרויקט , מפתח , בעל ציון סופי 100 בקורס "מבוא למדעי המחשב"
-      <br>
-      זיו הוכמן – מפתח ווב , בעל ציון סופי 99 בקורס "מבוא למדעי המחשב"
-      <br>
-      אנזור טוריקאשווילי – מפתח ווב, בעל ציון סופי 89 בקורס "מבוא למדעי המחשב".
-      <br>
-      קישורים:
-    </p>
-  </div>
+    <div class="First-Para">
+      <p>היי, ברוכים הבאים לאתר שלנו Lets learn C.
+        <br>
+        אנו שלושה סטודנטים מהמכון הטכנולוגי בחולון שמתחילים את שנתם השנייה.
+        <br>
+        בתור סטודנטים שעברו את שנה א' אנו יודעים כמה מייגעת וקשה היא, כמה מעט חומר בעברית יש
+        על שפת סי ואם כבר יש חומר על השפה הזו, הוא בד"כ ישן , לא מעודכן , לא מובן ובעיקר לא נוח לקריאה.
+        <br>
+        אז בתור פרויקט לקחנו על עצמנו הכנת אתר זה שמטרתו לעזור לסטודנטים אחרים (ובעצם לכל מי שרוצה ללמוד את הבסיס של שפת
+        סי) ללמוד.
+        חשוב לנו מאוד לציין, שמדובר בשפה שלא נחשבת לקלה בתור שפה ראשונה, אבל היתרונות שלה על שפת אחרות הוא בכך שכאשר
+        עבודה
+        נעשית בשפת סי היא נעשית ברמה מאוד נמוכה מבחינת המעבד <br>(low level) ובשל כך אנו לומדים קצת יותר טוב מה קורה
+        בתחתית.
+        <br>
+        <br>
+        קצת עלינו:
+        <br>
+        להב הררי – הוגה הפרויקט , מפתח , בעל ציון סופי 100 בקורס "מבוא למדעי המחשב"
+        <br>
+        זיו הוכמן – מפתח ווב , בעל ציון סופי 99 בקורס "מבוא למדעי המחשב"
+        <br>
+        אנזור טוריקאשווילי – מפתח ווב, בעל ציון סופי 89 בקורס "מבוא למדעי המחשב".
+        <br>
+        קישורים:
+      </p>
+    </div>
 
-
+  </section>
 </body>
 
 </html>
