--- a/mathOperator.html
+++ b/mathOperator.html
@@ -6,27 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lets learn C: mathOperator</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
- <!-- Font Awesome -->
- <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <!-- Font Awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
- <!-- CSS -->
+  <!-- CSS -->
 
- <!-- Bootstrap Scripts -->
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-   integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <link rel="stylesheet" href="css/styles.css">
+  <!-- Bootstrap Scripts -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css">
 
- <!-- Java Script -->
- <script src="js/code.js"></script>
+  <!-- Java Script -->
+  <script src="js/code.js"></script>
 
 
 </head>
 
-<body class="bg-oneAndHalf">
-  
+<body class="bg-oneAndHalf scrollbar scrollbar_style">
+
   <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
-  <div id="mySidenav" class="sidenav">
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
@@ -54,64 +54,60 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <h1 class="head-left">Lets learn C</h1>
-  <h1 class="head-right">אופרטורים חשבוניים</h1>
+  <section id="main">
 
-  <section class="First-Para">
+    <h1 class="head-left">Lets learn C</h1>
+    <h1 class="head-right">אופרטורים חשבוניים</h1>
 
-    + פעולת חיבור 
-    <br>
-    - פעולת חיסור 
-    <br>
-    / פעולה חילוק 
-    <br>
-    * פעולת כפל 
-    <br>
-    % מודולו - אופרטור שבעצם אומר לנו מהי שארית החלוקה של מספר במספר אחר. 
-    <br>
-    () סוגריים  
-    <br>
-    = השמה - זוהי בעצם פעולה שאומרת בתכנות שמה שנמצא בצד שמאל מקבל את הערך שנמצא בצד ימין. 
-    <br>
-    <br>
-    דוגמה למודולו: 
-    <br>
-    7%3 = 1 
-    <br>
-    כי: 
-    <br>
-    7/3 = 2.3333 
-    <br>
-    ושארית החלוקה שלנו היא בעצם 1 מתוך 3 (שליש) -> 1 
-    <br>
-    מהי שארית החלוקה של 12 ב4 ? 
-    <br>
-    באותה הדרך אנו נעשה קודם כל : 
-    <br>
-    12/4 = 3.0 
-    <br>
-    ניקח את ה0/4 שיש לנו ובעצם שארית החלוקה שלנו היא 0. 
-    <br>
-    <br>
+    <div class="First-Para">
 
-  </section>
+      + פעולת חיבור
+      <br>
+      - פעולת חיסור
+      <br>
+      / פעולה חילוק
+      <br>
+      * פעולת כפל
+      <br>
+      % מודולו - אופרטור שבעצם אומר לנו מהי שארית החלוקה של מספר במספר אחר.
+      <br>
+      () סוגריים
+      <br>
+      = השמה - זוהי בעצם פעולה שאומרת בתכנות שמה שנמצא בצד שמאל מקבל את הערך שנמצא בצד ימין.
+      <br>
+      <br>
+      דוגמה למודולו:
+      <br>
+      7%3 = 1
+      <br>
+      כי:
+      <br>
+      7/3 = 2.3333
+      <br>
+      ושארית החלוקה שלנו היא בעצם 1 מתוך 3 (שליש) -> 1
+      <br>
+      מהי שארית החלוקה של 12 ב4 ?
+      <br>
+      באותה הדרך אנו נעשה קודם כל :
+      <br>
+      12/4 = 3.0
+      <br>
+      ניקח את ה0/4 שיש לנו ובעצם שארית החלוקה שלנו היא 0.
+      <br>
 
-
-
-  <!--Second paragraph-->
-  <section class="para">
+    </div>
+    <!--Second paragraph-->
     <div class="row">
       <div class="col-md-6">
-
-        דוגמה להשמה: 
-        <br>
-        בעצם מה שקורה פה זה שאנחנו מצהירים על משתנה בשם x ואנחנו משווים אותו ל5, כלומר עשינו פה השמה. 
-        במקרה הזה, לקחנו את x (שכבר מוכר לנו כ-int), וביצענו השמה אצלו של הערך 7.
-
-
-
+        <div class="para">
+          <p>
+            דוגמה להשמה:
+            <br>
+            בעצם מה שקורה פה זה שאנחנו מצהירים על משתנה בשם x ואנחנו משווים אותו ל5, כלומר עשינו פה השמה.
+            במקרה הזה, לקחנו את x (שכבר מוכר לנו כ-int), וביצענו השמה אצלו של הערך 7.
+          </p>
+        </div>
       </div>
-
       <div class="col-md-6">
 
         <figure class="code">
@@ -119,24 +115,15 @@
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <b>void</b> main()
 {
- <b>int</b> x;
- x = 7;
+  <b>int</b> x;
+  x = 7;
 }
           </code></pre>
         </figure>
-      
-        
-
       </div>
-
-
-    <div class="col"></div>
-
-
+    </div>
   </section>
 
 </body>
 
 </html>
-  
-
