--- a/recursion.html
+++ b/recursion.html
@@ -23,9 +23,9 @@
 
 </head>
 
-<body class="bg-three">
+<body class="bg-three scrollbar scrollbar_style">
   <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
-  <div id="mySidenav" class="sidenav">
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
@@ -85,36 +85,34 @@
         <br>
         כעת, הגענו ל 1 -> אנו לא יכולים לחלק ב2 יותר ולכן נספור כמה פעמים ביצענו את החילוק.
         <br>
-        1->2->4->8->16->32 כלומר, ביצענו את החילוק 5 פעמים ולכן 32 מתחלק ב-2 חמש פעמים.
+        1-&gt;2-&gt;4-&gt;8-&gt;16-&gt;32 כלומר, ביצענו את החילוק 5 פעמים ולכן 32 מתחלק ב-2 חמש פעמים.
         <br>
         איך ממשים דבר כזה?
         <br>
         אז לפני שנקפוץ לפתרון כדאי שנחשוב על כמה דברים:
-        <br>
-        1. מהו תנאי העצירה?
-        <br>
-        2. מה השינוי שאנו עושים בכל פעם כדי לצמצם את גודל הבעיה?
-        <br>
-        3. איך אנו קורא לפונקציה שוב?
-        <br>
+        <ol>
+          <li>מהו תנאי העצירה?</li>
+          <li>מה השינוי שאנו עושים בכל פעם כדי לצמצם את גודל הבעיה?</li>
+          <li>איך אנו קורא לפונקציה שוב?</li>
+        </ol>
         <br>
         1* אם אתם נתקעים על השאלה "מהו תנאי העצירה?" נסו לחשוב "מתי אני מפסיק לעשות את הפעולה הזאת?" או "מה הבעיה הקטנה
         ביותר שמסתתרת מאחורי השאלה?"
         <br>
         2* אם אתם נתקעים בשאלה השנייה תנסו לחשוב "מה שונה בין כל שלב ושלב?"
         <br>
-        אחרי שחשבנו נסתכל על השאלה וננסה להבין מה אנחנו אמורים לקבל חזרה? -> מה הפונקציה מחזירה?
+        אחרי שחשבנו נסתכל על השאלה וננסה להבין מה אנחנו אמורים לקבל חזרה? -&gt; מה הפונקציה מחזירה?
         האם זה מספר? תו? או בכלל כלום?
         <br>
         <br>
         בשאלה שלנו:
         <br>
-        1. תנאי העצירה הוא כשהמספר הוא 1, כלומר אי אפשר לחלק ב2 יותר.
         <br>
-        2. השינוי הוא חילוק ב2 פעם אחת בכל פעם.
-        <br>
-        3. אנו קוראים לפונקציה שוב בכל פעם רק עם תוספת של הצלחה אחת.
-        <br>
+        <ol>
+          <li>תנאי העצירה הוא כשהמספר הוא 1, כלומר אי אפשר לחלק ב2 יותר.</li>
+          <li>השינוי הוא חילוק ב2 פעם אחת בכל פעם.</li>
+          <li>אנו קוראים לפונקציה שוב בכל פעם רק עם תוספת של הצלחה אחת.</li>
+        </ol>
         <br>
         כעת, לאחר שאנחנו יודעים את כל השלבים נסתכל על המבנה הבא:
       </p>
@@ -128,15 +126,17 @@
 
           <p>
             מספר הערות:
-            <br>
-            אחרי שעלינו על פתרון מסוים אנחנו צריכים לבדוק אם הפתרון שלנו עונה על תנאי השאלה.
-            <br>
-            כלומר, האם הקלט מותאם למה שהתבקש? האם הפלט של התוכנית הוא כמו הפלט שרצינו שיהיה?
-            <br>
-            הדרך הכי טובה לבדוק את זה היא לקחת מספר קטן שאנחנו יודעים את התוצאה שאמורה להיות או את הדוגמא שאנחנו מקבלים,
-            <br>
-            להריץ אותה על הקוד שלנו ולראות מה יהיה הפלט.
-            <br>
+            <ul>
+              <li>
+                אחרי שעלינו על פתרון מסוים אנחנו צריכים לבדוק אם הפתרון שלנו עונה על תנאי השאלה.
+                כלומר, האם הקלט מותאם למה שהתבקש? האם הפלט של התוכנית הוא כמו הפלט שרצינו שיהיה?
+              </li>
+              <li>
+                הדרך הכי טובה לבדוק את זה היא לקחת מספר קטן שאנחנו יודעים את התוצאה שאמורה להיות או את הדוגמא שאנחנו
+                מקבלים,
+                להריץ אותה על הקוד שלנו ולראות מה יהיה הפלט.
+              </li>
+            </ul>
           </p>
 
 
