--- a/selectionSort.html
+++ b/selectionSort.html
@@ -23,9 +23,9 @@
 
 </head>
 
-<body  class="bg">
-    <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
-  <div id="mySidenav" class="sidenav">
+<body class="bg scrollbar scrollbar_style">
+  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
@@ -56,11 +56,11 @@
 
 
 
-    <h1 class="top-left">Lets learn C</h1>
+  <h1 class="top-left">Lets learn C</h1>
 
-    <h2 class="top-right-head">NULL</h2>
+  <h2 class="top-right-head">NULL</h2>
 
-    <p class="top-right">
+  <p class="top-right">
 
 
 
