--- a/dinArrays.html
+++ b/dinArrays.html
@@ -23,9 +23,9 @@
 
 </head>
 
-<body class="bg">
-    <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
-  <div id="mySidenav" class="sidenav">
+<body class="bg scrollbar scrollbar_style">
+  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
@@ -53,16 +53,20 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <h1 class="top-left">Lets learn C</h1>
-  </div>
 
-  <h2 class="top-right-head">מערכים דו ממדיים</h2>
+  <section id="main">
+    <h1 class="head-left">Lets learn C</h1>
+    <h1 class="head-right">מערכים דו ממדיים</h2>
+      <div class="First-Para">
+        <p>
+          כרגע, אין מה להציג
+        </p>
+      </div>
 
-  <p class="top-right">
 
-    כרגע, אין מה להציג
 
-  </p>
+  </section>
+
 
 
 </body>
